update ajax response of registration form

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -20,7 +20,6 @@
   <p><a class="popup-modal-dismiss" href="#">&times;</a></p>
 </div>
 <br>
-<br>
 <hr>
-<p>原本註冊</p>
-<%= link_to "註冊", new_member_registration_path %>
+<a href="#" id="foundation-popup-link">Ajax註冊</a>
+<div id="foundation-popup"></div>
